# cpp-mcp

./: .gitignore  CHANGELOG.md  README.md  REQUIREMENTS.md  pyproject.toml
.claude/handoff/v1/: CHARTER.md  adr-1.md  adr-10.md  adr-2.md  adr-3.md  adr-4.md  adr-5.md  adr-6.md  adr-7.md  adr-8.md  adr-9.md  deploy-notes.md  design.md  docs-changes.md  implementation-notes.md  plan.md  requirements.md  runbook.md  scenarios.md  session-analysis.html  test-report.md
.claude/handoff/v2/: CHARTER.md  adr-1.md  adr-2.md  adr-3.md  adr-4.md  adr-5.md  adr-6.md  adr-7.md  adr-8.md  adr-9.md  deploy-notes.md  design.md  docs-changes.md  implementation-notes.md  plan.md  requirements-fastmcp-migration.md  requirements.md  runbook.md  scenarios.md  test-report.md
.claude/handoff/v3/: CHARTER.md  adr-12.md  adr-13.md  adr-14.md  adr-15.md  deploy-notes.md  design.md  docs-changes.md  implementation-notes.md  plan.md  requirements-raw.md  requirements.md  runbook.md  scenarios.md  test-report.md
.claude/handoff/v4/: CHARTER.md  adr-16.md  adr-17.md  adr-18.md  deploy-notes.md  design.md  docs-changes.md  implementation-notes.md  plan.md  requirements-raw.md  requirements.md  runbook.md  scenarios.md  test-report.md
.claude/handoff/v5/: CHARTER.md  adr-19.md  adr-20.md  adr-21.md  deploy-notes.md  design.md  docs-changes.md  implementation-notes.md  plan.md  requirements-raw.md  requirements.md  runbook.md  scenarios.md  test-report.md
.claude/handoff/v6/: CHARTER.md  adr-22.md  adr-23.md  adr-24.md  deploy-notes.md  design.md  docs-changes.md  implementation-notes.md  plan.md  requirements-raw.md  requirements.md  runbook.md  scenarios.md  test-report.md
.claude/handoff/v7/: CHARTER.md  adr-25.md  deploy-notes.md  design.md  docs-changes.md  implementation-notes.md  plan.md  requirements-raw.md  requirements.md  runbook.md  scenarios.md  test-report.md
.claude/handoff/v8/: CHARTER.md  adr-26.md  deploy-notes.md  design.md  docs-changes.md  implementation-notes.md  plan.md  requirements-raw.md  requirements.md  runbook.md  scenarios.md  test-report.md
.github/workflows/: ci.yml
src/cpp_mcp/: __init__.py  __main__.py
src/cpp_mcp/core/: __init__.py  ast_walker.py  clang_session.py  compile_db.py  cursor.py  deps.py  error_envelope.py  path_guard.py  query_config.py  tu_cache.py
src/cpp_mcp/graphdb/: __init__.py  cognee_driver.py  driver.py  exporter.py  indradb_driver.py  indradb_query_executor.py  neo4j_driver.py  neo4j_query_executor.py  query_executor.py  schema.py  schema_introspector.py  schema_version.py
src/cpp_mcp/server/: __init__.py  _registry.py  app.py  config.py  http_transport.py  schemas.py  stdio_transport.py
src/cpp_mcp/tools/: __init__.py  describe_graph_schema.py  export_to_graphdb.py  get_ast.py  get_definition.py  get_header_info.py  get_preprocessor_state.py  get_references.py  get_type_info.py  ingest_code.py  query_graphdb.py
tests/: conftest.py
tests/bdd/: conftest.py  test_concurrent_ast.py  test_default_flags.py  test_entrypoint.py  test_error_envelope_bdd.py  test_export_to_graphdb.py  test_export_to_indradb.py  test_get_ast.py  test_get_definition.py  test_get_header_info.py  test_get_preprocessor_state.py  test_get_references.py  test_get_type_info.py  test_ingest_code.py  test_ingest_code_indradb.py  test_path_traversal.py  test_query_graphdb_bdd.py  test_read_only.py  test_stateless_build.py  test_transport_http.py  test_transport_stdio.py  test_tu_cache_bdd.py
tests/bdd/features/: cpp_get_ast.feature  cpp_get_definition.feature  cpp_get_header_info.feature  cpp_get_preprocessor_state.feature  cpp_get_references.feature  cpp_get_type_info.feature  default_flags.feature  entrypoint.feature  error_envelope.feature  export_to_graphdb.feature  export_to_indradb.feature  get_ast.feature  get_definition.feature  get_header_info.feature  get_preprocessor_state.feature  get_references.feature  get_type_info.feature  path_traversal.feature  query_graphdb.feature  read_only_enforcement.feature  stateless_build.feature  transport_http.feature  transport_stdio.feature  tu_cache.feature
tests/fixtures/: expected_tool_descriptions.py  fake_indradb.py  indradb-compose.yml
tests/fixtures/cpp/: ast_test.cpp  broken_partial.cpp  caller.cpp  config_macros.cpp  definition_test.cpp  forward_decl.cpp  header_api.h  header_missing_include.h  header_standalone.h  macro_test.cpp  references_test.cpp  tiny.cpp  types_test.cpp  unparseable.cpp
tests/fixtures/expected_schemas/: __init__.py
tests/integration/: conftest.py  test_all_tools_smoke.py  test_describe_graph_schema_e2e.py  test_harness_smoke.py  test_indradb_e2e.py  test_install.py  test_query_graphdb_e2e.py  test_query_graphdb_live_indradb.py  test_readme_extras.py  test_v7_s1_access_filter_live.py  test_v7_s1_field_vs_global_live.py
tests/unit/: test_bootstrap.py  test_clang_session.py  test_cognee_driver.py  test_compile_db.py  test_dependency_missing.py  test_driver_dispatch.py  test_envelope_codes.py  test_envelope_decorator_order.py  test_envelope_mask_error_details.py  test_error_envelope.py  test_executor_dispatch.py  test_foundation_property.py  test_graphdb_additions.py  test_graphdb_exporter.py  test_indradb_driver.py  test_indradb_driver_insert_boundary.py  test_indradb_driver_insert_counts.py  test_indradb_driver_no_identifier.py  test_lifespan.py  test_main_entrypoint.py  test_no_broken_docker_image.py  test_path_guard.py  test_pyproject_extras.py  test_pyproject_pin.py  test_rename_invariant.py  test_runbook_present.py  test_schema_parity.py  test_schema_parity_meta.py  test_select_driver_boundaries.py  test_server_app.py  test_tool_registration.py  test_tools_qa.py  test_tu_cache.py  test_warn_non_loopback.py  test_warn_non_loopback_qa.py
tests/unit/core/: test_query_config.py  test_query_error_codes.py
tests/unit/graphdb/: test_class_props.py  test_describe_v1_compat.py  test_describe_v2_shape.py  test_field_classification.py  test_function_signature.py  test_global_variable_classification.py  test_indradb_query_subset.py  test_mcp_tool_signatures.py  test_neo4j_read_only.py  (+16 more)
(+123 files in other folders)
