[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cpp-mcp"
version = "0.3.0"
description = "C++ Semantic Analysis MCP Server"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "fastmcp~=3.1.0",
    "mcp>=1.0",
    "clang>=17,<20",
]

[project.optional-dependencies]
graphdb-neo4j = ["neo4j>=5,<6"]
graphdb-indradb = ["indradb>=3.0,<4", "protobuf<4"]
graphdb = ["cpp-mcp[graphdb-neo4j]", "cpp-mcp[graphdb-indradb]"]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-bdd",
    "pytest-asyncio",
    "pytest-cov",
    "build",
]

[project.scripts]
cpp-mcp = "cpp_mcp.server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cpp_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# B008: FastMCP uses Depends(...) in argument defaults as its DI pattern (ADR-3).
ignore = ["B008"]

[tool.mypy]
strict = true
packages = ["cpp_mcp"]

[[tool.mypy.overrides]]
module = "clang.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not integration'"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "libclang: requires system libclang",
    "neo4j: requires NEO4J_TEST_URI",
    "indradb: requires INDRADB_TEST_URI",
    "integration: marks tests that require live services or env-gated resources (skipped by default)",
    "SC_US_1_1: Story 5 US-1 scenario 1",
    "SC_US_1_5: Story 5 US-1 scenario 5",
    "SC_US_1_6: Story 5 US-1 scenario 6",
    "SC_US_1_7: Story 5 US-1 scenario 7",
    "SC_US_1_9: Story 5 US-1 scenario 9",
    "SC_US_1_10: Story 5 US-1 scenario 10",
    "SC_US_1_11: Story 5 US-1 scenario 11",
    "SC_US_1_14: Story 5 US-1 scenario 14",
    "SC_US_2_1: Story 5 US-2 scenario 1",
    "SC_US_2_2: Story 5 US-2 scenario 2",
    "SC_US_2_4: Story 5 US-2 scenario 4",
    "SC_US_2_5: Story 5 US-2 scenario 5",
    "SC_US_2_6: Story 5 US-2 scenario 6",
    "SC_US_3_1: Story 5 US-3 scenario 1",
    "SC_US_3_2: Story 5 US-3 scenario 2",
    "SC_US_3_3: Story 5 US-3 scenario 3",
    "SC_US_3_4: Story 5 US-3 scenario 4",
    "SC_US_3_6: Story 5 US-3 scenario 6",
    "SC_US_3_7: Story 5 US-3 scenario 7",
    "SC_US_3_8: Story 5 US-3 scenario 8",
    # Story 6 — ast-and-structural-tools (SC_US_4, SC_US_5, SC_US_6)
    "SC_US_4_1: Story 6 US-4 scenario 1",
    "SC_US_4_2: Story 6 US-4 scenario 2",
    "SC_US_4_3: Story 6 US-4 scenario 3",
    "SC_US_4_4: Story 6 US-4 scenario 4",
    "SC_US_4_5: Story 6 US-4 scenario 5",
    "SC_US_4_6: Story 6 US-4 scenario 6",
    "SC_US_4_7: Story 6 US-4 scenario 7",
    "SC_US_4_8: Story 6 US-4 scenario 8",
    "SC_US_4_9: Story 6 US-4 scenario 9",
    "SC_US_4_10: Story 6 US-4 scenario 10",
    "SC_US_5_1: Story 6 US-5 scenario 1",
    "SC_US_5_2: Story 6 US-5 scenario 2",
    "SC_US_5_3: Story 6 US-5 scenario 3",
    "SC_US_5_4: Story 6 US-5 scenario 4",
    "SC_US_5_5: Story 6 US-5 scenario 5",
    "SC_US_5_6: Story 6 US-5 scenario 6",
    "SC_US_5_7: Story 6 US-5 scenario 7",
    "SC_US_6_1: Story 6 US-6 scenario 1",
    "SC_US_6_2: Story 6 US-6 scenario 2",
    "SC_US_6_3: Story 6 US-6 scenario 3",
    "SC_US_6_4: Story 6 US-6 scenario 4",
    "SC_US_6_5: Story 6 US-6 scenario 5",
    "SC_US_6_6: Story 6 US-6 scenario 6",
    "SC_US_6_7: Story 6 US-6 scenario 7",
    # Story 7 — mcp-server-transport (SC_US_8 … SC_US_14)
    "SC_US_8_1: Story 7 US-8 scenario 1",
    "SC_US_8_4: Story 7 US-8 scenario 4",
    "SC_US_9_1: Story 7 US-9 scenario 1",
    "SC_US_9_2: Story 7 US-9 scenario 2",
    "SC_US_9_4: Story 7 US-9 scenario 4",
    "SC_US_10_1: Story 7 US-10 scenario 1",
    "SC_US_10_2: Story 7 US-10 scenario 2",
    "SC_US_10_4: Story 7 US-10 scenario 4",
    "SC_US_10_6: Story 7 US-10 scenario 6",
    "SC_US_11_1: Story 7 US-11 scenario 1",
    "SC_US_11_3: Story 7 US-11 scenario 3",
    "SC_US_12_1: Story 7 US-12 scenario 1",
    "SC_US_12_2: Story 7 US-12 scenario 2",
    "SC_US_12_4: Story 7 US-12 scenario 4",
    "SC_US_12_5: Story 7 US-12 scenario 5",
    "SC_US_12_6: Story 7 US-12 scenario 6",
    "SC_US_13_1: Story 7 US-13 scenario 1",
    "SC_US_13_2: Story 7 US-13 scenario 2",
    "SC_US_13_3: Story 7 US-13 scenario 3",
    "SC_USM7_3: Story S3 concurrent HTTP cpp_get_ast calls, thread-affinity",
    "SC_US_11_1_ALL_TOOLS: Story 7 US-11 all-tools read-only enforcement outline",
    "SC_USM2_1: Story S2 US-M2 scenario 1 — HTTP transport",
    "SC_USM2_4: Story S2 US-M2 scenario 4 — HTTP transport",
    "SC_US_14_CALL_ENVELOPE: subprocess tools/call with path-traversal input",
    "SC_US_14_1: Story 7 US-14 scenario 1",
    "SC_US_14_2: Story 7b US-14 scenario 2 — HTTP transport",
    "SC_US_14_3: Story 7 US-14 scenario 3",
    "SC_US_14_4: Story 7 US-14 scenario 4",
    # followup — Cognee GraphDriver (ADR-7 deferred)
    "cognee: requires COGNEE_BASE_URL",
    # Story 8 — graphdb-exporter (SC_US_7_*)
    "SC_US_7_1: Story 8 US-7 scenario 1",
    "SC_US_7_2: Story 8 US-7 scenario 2",
    "SC_US_7_3: Story 8 US-7 scenario 3",
    "SC_US_7_4: Story 8 US-7 scenario 4",
    "SC_US_7_5: Story 8 US-7 scenario 5",
    "SC_US_7_6: Story 8 US-7 scenario 6",
    "SC_US_7_7: Story 8 US-7 scenario 7",
    "SC_US_7_8: Story 8 US-7 scenario 8",
    "SC_US_7_9: Story 8 US-7 scenario 9",
    "SC_US_7_10: Story 8 US-7 scenario 10",
    "SC_US_7_11: Story 8 US-7 scenario 11",
    # v3 graphdb-multi — US-G5 IndraDB BDD coverage
    "SC_US_G5_1: US-G5 scenario 1 — single file export to IndraDB fake driver",
    "SC_US_G5_2: US-G5 scenario 2 — idempotent re-export IndraDB fake driver",
    "SC_US_G5_3: US-G5 scenario 3 — unreachable daemon returns DB_UNREACHABLE",
    "SC_US_G5_4: US-G5 scenario 4 — dispatch table covers all IndraDB schemes",
    "SC_US_G5_5: US-G5 scenario 5 — PATH_VIOLATION with indradb URI",
    "SC_US_G5_6: US-G5 scenario 6 — FILE_NOT_FOUND with indradb URI",
    # v3 graphdb-multi — US-G3 dispatch ordering scenarios
    "SC_US_G3_4a: US-G3 scenario: INVALID_ARGUMENT before PATH_VIOLATION for unknown scheme",
    "SC_US_G3_4b: US-G3 scenario: INVALID_ARGUMENT before FILE_NOT_FOUND for unknown scheme",
    "SC_US_G3_4c: US-G3 scenario: PATH_VIOLATION still fires for known scheme with traversal",
    # S7 — cleanup, entrypoint gate
    "SC_C10_ENTRY: C-10 console-script entrypoint emits JSON-RPC frame on stdio",
]

[dependency-groups]
dev = [
    "hypothesis>=6.152.7",
]
